--- a/mmr.html
+++ b/mmr.html
@@ -11,7 +11,7 @@
 <meta http-equiv="x-ua-compatible" content="ie=edge">
 
 <!-- Bootstrap CSS -->
-<link rel="stylesheet" href="mmr/css/flatly.css">
+<link rel="stylesheet" href="/mmr/css/flatly.css">
 
 <style>
 
@@ -216,8 +216,8 @@ a, a:hover {
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js" integrity="sha384-3ceskX3iaEnIogmQchP8opvBy3Mi7Ce34nWjpBIwVTHfGYWQS9jwHDVRnpKKHJg7" crossorigin="anonymous"></script>
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
 <!-- Load our MMR and MMRScore classes -->
-<script src="mmr/js/MMR.js"></script>
-<script src="mmr/js/MMRScore.js"></script>
+<script src="/mmr/js/MMR.js"></script>
+<script src="/mmr/js/MMRScore.js"></script>
 <script>
 
 function addCommas(intNum) {
