--- a/mmr/index.html
+++ b/mmr/index.html
@@ -2,8 +2,6 @@
 
 <html lang="en">
 
-<!-- This page goes into the 'IPS pages' page and the 'MMR folder' gets uploaded to the server. I know, it's stupid -->
-
 <head>
 <!-- Required meta tags always come first -->
 <meta charset="utf-8">
@@ -12,7 +10,7 @@
 <title>MMR</title>
 
 <!-- Bootstrap CSS -->
-<link rel="stylesheet" href="/mmr-lib/css/flatly.css">
+<link rel="stylesheet" href="/mmr/css/flatly.css">
 
 <style>
 
@@ -217,8 +215,8 @@ a, a:hover {
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js" integrity="sha384-3ceskX3iaEnIogmQchP8opvBy3Mi7Ce34nWjpBIwVTHfGYWQS9jwHDVRnpKKHJg7" crossorigin="anonymous"></script>
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
 <!-- Load our MMR and MMRScore classes -->
-<script src="/mmr-lib/js/MMR.js"></script>
-<script src="/mmr-lib/js/MMRScore.js"></script>
+<script src="/mmr/js/MMR.js"></script>
+<script src="/mmr/js/MMRScore.js"></script>
 <script>
 
 function addCommas(intNum) {
